--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <html>
     <head>
         <title> contador </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1> contador </h1>
-        <p> 0 </p>
-        <button> clique </button>
+        <div class="container">
+            <div>
+                <h1> contador </h1>
+            </div>
+            <div>
+                <p> 0 </p>
+            </div>
+            <div>
+                <button> clique </button>
+            </div>
+        </div>
     </body>
 </html>
