[feat]adicionamos logica ao contador

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <div class="container">
       <div>
         <h1>contador</h1>
-        <p>0</p>
-        <button>clique</button>
+        <p id="contador_na_tela"></p>
+        <button onclick="clickbutton()">clique</button>
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
