--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <title>LoginPage</title>
-</head>
-<body>
-    <div class="login-container">
-        <form onsubmit="onSubmit()">
-            <!-- <label for="password"> Nome do usuário </label> -->
-            <input type="text" name="username" placeholder="username" class="input-style"><br>
-            <input type="password" name="password" placeholder="password" class="input-style"><br>
-            <input type="submit" value="entrar" class="input-style" id="submit-button"><br>
-        </form>
-    </div>
-    <script src="main.js">  </script>
-</body>
-</html> 
+	<head>
+		<link rel="stylesheet" href="style.css" />
+		<title>LoginPage</title>
+	</head>
+	<body>
+		<div class="login-container">
+			<form>
+				<!-- <label for="password"> Nome do usuário </label> -->
+				<input type="text" name="username" id="username" placeholder="username" class="input-style" /><br />
+				<input type="password" name="password" id="password" placeholder="password" class="input-style" /><br />
+				<button type="button" class="input-style" id="submit-button" onclick="onSubmit()">
+					Entrar</button
+				><br />
+			</form>
+		</div>
+		<script src="main.js"></script>
+	</body>
+</html>
