--- a/pages/cadastro/index.html
+++ b/pages/cadastro/index.html
@@ -7,13 +7,12 @@
 	<body>
 		<div class="login-container">
 			<form>
-				<!-- <label for="password"> Nome do usuário </label> -->
 				<input type="text" name="username" id="username" placeholder="username" class="input-style" /><br />
-				<input type="password" name="password" id="password" placeholder="password" class="input-style" /><br />
+                <input type="password" name="password" id="password" placeholder="password" class="input-style" /><br />
+                <input type='password' name='confirm-password'id='confirm-password' placeholder='confirm password' class='input-style' /><br />
 				<button type="button" class="input-style" id="submit-button" onclick="onSubmit()">
-					Entrar</button><br />
-				<button type="button" class="input-style" id="submit-button" onclick="signup()">
-					Cadastrar-se</button><br />
+					Cadastrar-se</button
+				><br />
 			</form>
 		</div>
 		<script src="main.js"></script>
