arrumamos 2 elementos com ids iguais

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<input type="password" name="password" id="password" placeholder="password" class="input-style" /><br />
 				<button type="button" class="input-style" id="submit-button" onclick="onSubmit()">
 					Entrar</button><br />
-				<button type="button" class="input-style" id="submit-button" onclick="signup()">
+				<button type="button" class="input-style" id="signup-button" onclick="signup()">
 					Cadastrar-se</button><br />
 			</form>
 		</div>
